# PasswordStealer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.txt.example
src/: browser_data.cpp  browser_data.h  main.cpp  utils.cpp  utils.h
